# money-api

./: .env  Cargo.toml  README.md
migrations/2024-05-26-152013_create_bank/: up.sql
migrations/2024-05-27-122845_create-agency/: down.sql  up.sql
migrations/2024-06-02-195457_create_user/: up.sql
src/: error_handler.rs  main.rs
src/handlers/: agency.rs  bank.rs  mod.rs  user.rs
src/models/: agency.rs  bank.rs  mod.rs  schema.rs  user.rs
src/repository/: database.rs
