[package]
name = "money-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env = "0.0.0"
env_logger = "0.11.3"
r2d2 = "0.8.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
